Bug 1959283 - Give addons picker flex wrapping a breakpoint r=omc-reviewers,mimi
This patch removes the wrapping of the addons-container at all widths, and instead wraps it only at widths < 960 and > 800, which is the range that the contents of the container can overflow if the title of the addon has a very long word in it.

Differential Revision: https://phabricator.services.mozilla.com/D248091

--- a/browser/components/aboutwelcome/content-src/aboutwelcome.scss
+++ b/browser/components/aboutwelcome/content-src/aboutwelcome.scss
@@ -1145,7 +1145,7 @@ html {
 
           .addon-container {
             display: flex;
-            flex-flow: row wrap;
+            flex-direction: row;
             border: 1px solid var(--in-content-border-color);
             box-shadow: 0 1px 2px 0 var(--in-content-border-color);
             border-radius: 4px;
@@ -1153,6 +1153,10 @@ html {
             text-align: start;
             padding: 16px;
             max-width: 800px;
+
+            @media (800px <= width <= 990px) {
+              flex-flow: row wrap;
+            }
 
             .rtamo-icon {
               img {
